Day 8 part 2 (Fortran) complete

--- a/8/Makefile
+++ b/8/Makefile
@@ -1,6 +1,10 @@
 
 part1:
-	gfortran -std=f2018 -fcheck=bounds -o part1 part1.f90
+	gfortran -std=f2018 -fcheck=bounds -o part1 bootmachine.f90 part1.f90
 	./part1
 
-.PHONY: part1
+part2:
+	gfortran -std=f2018 -fcheck=bounds -o part2 bootmachine.f90 part2.f90
+	./part2	
+
+.PHONY: part1 part2
