--- a/9/Makefile
+++ b/9/Makefile
@@ -5,4 +5,8 @@ part1:
 	$(CC) $(CFLAGS) -o part1 part1.c
 	./part1
 
-.PHONY: part1
+part2:
+	$(CC) $(CFLAGS) -D NO_PART1_MAIN -o part1 part2.c part1.c
+	./part1
+
+.PHONY: part1 part2
