--- a/14/Makefile
+++ b/14/Makefile
@@ -1,7 +1,3 @@
-.PHONY: part1 part2
-
-part1: 
-	kotlinc part1.kt -include-runtime -d part1.jar && java -jar part1.jar 
-
-part2:
-	kotlinc part2.kt -include-runtime -d part1.jar && java -jar part2.jar 
+.PHONY: run
+run: 
+	kotlinc advent.kt -include-runtime -d advent.jar && java -jar advent.jar 
