Day 17 part 2 complete

--- a/17/Makefile
+++ b/17/Makefile
@@ -1,12 +1,8 @@
-.PHONY: part1 part2
+.PHONY: run
 
 CC=clang++
 CFLAGS=-std=c++11
 
-part1:
-	$(CC) $(CFLAGS) part1.cpp -o part1
-	./part1
-
-part2:
-	$(CC) $(CFLAGS) part2.cpp -o part2
-	./part2
+run:
+	$(CC) $(CFLAGS) main.cpp -o day-17
+	./day-17
